# binder-rs

./: .gitignore  Cargo.toml  Makefile.toml
.cargo/: config.toml
BinderClient/: settings.gradle.kts
BinderClient/app/: build.gradle.kts
BinderClient/app/src/main/: AndroidManifest.xml
BinderClient/app/src/main/java/com/example/binderclient/: BinderClient.kt  MainActivity.kt
BinderClient/app/src/main/java/com/example/binderclient/ui/theme/: Color.kt  Theme.kt  Type.kt
BinderClient/app/src/main/res/values/: themes.xml
BinderClient/gradle/wrapper/: gradle-wrapper.properties
BinderServer/: settings.gradle.kts
BinderServer/app/: build.gradle.kts
BinderServer/app/src/main/: AndroidManifest.xml
BinderServer/app/src/main/java/com/example/binderserver/: BinderServer.kt  MainActivity.kt
BinderServer/app/src/main/java/com/example/binderserver/ui/theme/: Color.kt  Theme.kt  Type.kt
BinderServer/app/src/main/res/values/: themes.xml
BinderServer/gradle/wrapper/: gradle-wrapper.properties
src/: binding.rs  error.rs  lib.rs  macros.rs  parcel.rs  parcelable.rs  stability.rs
src/binder/: binder_type.rs  command_protocol.rs  constant.rs  devices.rs  flat_object.rs  mod.rs  transaction.rs  transaction_data.rs
src/parcel/: mod.rs  parcelable.rs
src/service/: mod.rs  service_listener.rs  service_manager.rs
