[package]
name = "binder-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }

num-traits = "0.2.19"
num-derive = "0.4.2"
bitflags = "2.9.0"
byteorder = "1.5.0"

nix = { version = "0.29.0", features = ["ioctl", "fs", "mman"] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
