[package]
name = "binder-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[features]
default = ["binding-java"]
binding-java = ["jni", "tracing-android"]

[dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "net", "rt", "macros"] }

num-traits = "0.2.19"
num-derive = "0.4.2"
bitflags = "2.9.0"
byteorder = "1.5.0"

nix = { version = "0.29.0", features = ["ioctl", "fs", "mman"] }

jni = { version = "0.21.1", optional = true }
tracing-android = { version = "0.2.0", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3.19"
